# PBL7-Server

./: .env.example  .env.production  .gitignore  deploy.sh  server.py
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  clients.py  dependencies.py  events.py  jobs.py  metrics.py  models.py  router.py  settings.py
backend/app/flower_bridge/: log_parser.py  strategy.py
backend/app/models/: __init__.py  checkpoint.py  client.py  event_log.py  round.py  setting.py  training_job.py  user.py
backend/app/schemas/: auth.py  client.py  events.py  job.py  metrics.py  model.py  settings.py
backend/app/services/: auth_service.py  client_service.py  flower_manager.py  job_service.py  metrics_service.py  model_service.py  settings_service.py
backend/app/websocket/: events.py  manager.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
docker/nginx/: nginx.conf
flower_server/: alignment_trainer.py  ast_model.py  cnn14_model.py  densenet121_model.py  prototype_fl_model.py  prototype_viz.py  resnet18_model.py  retrieval_eval.py  server.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: use-websocket.ts
frontend/src/lib/: api.ts  auth.tsx  types.ts  ws.ts
migrations/: 002_unify_clients.sql  003_add_joined_clients.sql
scripts/: seed_db.py  setup.sh
shared/: config.py  prototypes.py  types.py
(+9 files in other folders)
